--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,15 @@
     margin: 0;
     font-family: sans-serif;
 }
+
+:root {
+    --primary-color: #dc3545;
+    --dark-color: #333;
+    --light-color: #f4f4f4;
+    --danger-color: #dc3545;
+    --success-color: #28a745;
+    --darkreader-neutral-background: #212222;
+    --darkreader-neutral-text: #eae3d9;
+    --darkreader-selection-background: #165aaa;
+    --darkreader-selection-text: #fbf5ec;
+}
