--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,17 @@
     --darkreader-selection-background: #165aaa;
     --darkreader-selection-text: #fbf5ec;
 }
+
+#root {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+main {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
