Add clear button and send request to api and fetch data to show

--- a/src/pages/home/Index.module.scss
+++ b/src/pages/home/Index.module.scss
@@ -31,4 +31,9 @@
         font-size: inherit;
         border: none;
     }
+
+    .clearButton {
+        color: black;
+        background: var(--light-color);
+    }
 }
