--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,9 @@
 }
 
 main {
-    width: 90%;
+    width: 100%;
+    max-width: 1100px;
+    padding: 0 2rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
