--- a/src/components/shared/loading/Loading.module.scss
+++ b/src/components/shared/loading/Loading.module.scss
@@ -1,10 +1,8 @@
-.loading-container {
-    width: 85%;
-    height: 600px;
+.loadingContainer {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    img {
-        width: 10%;
-    }
+    margin-top: 50px;
 }
