--- a/src/pages/detail/back-button/BackButton.module.scss
+++ b/src/pages/detail/back-button/BackButton.module.scss
@@ -4,6 +4,8 @@
     justify-content: flex-start;
     align-items: center;
     span {
+        display: flex;
+        align-items: center;
         margin-left: 10px;
         font-size: 1rem;
     }
