--- a/src/pages/detail/projects/Projects.module.scss
+++ b/src/pages/detail/projects/Projects.module.scss
@@ -1,5 +1,8 @@
 .projects {
     padding: 1rem;
+    margin-top: 20px;
+    width: 100%;
+    
     a {
         color: var(--primary-color);
         text-decoration: none;
